<resources>
    <string name="app_name">utility_manage</string>
    <string name="register">ลงทะเบียน</string>
    <string name="savevalues">จดมาตร</string>
    <string name="headersavevalues">การจดเลขมาตร</string>
    <string name="homeid">เลขที่บ้าน</string>
    <string name="homegps">GPS</string>
    <string name="valuesid">เลขมาตร</string>
    <string name="invoices">พิมพ์แจ้งหนี้</string>
    <string name="printslip">พิมพ์ใบเสร็จ</string>
    <string name="headerregister">ลงทะเบียนผู้ใช้น้ำ</string>
    <string name="meterid">เลขมิเตอร์</string>
    <string name="typepay">ประเภทค่าบริการ</string>
    <string name="save">บันทึก</string>
    <string name="cancel">Cancle</string>
    <string name="success">Success</string>
    <string name="noPaper">No paper</string>
    <string name="noPaperNotice">No paper, please put paper in and retry</string>
    <string name="sure">sure</string>
    <string name="operation_result">Result</string>
    <string name="LowBattery">Low battery, please connect the charger!</string>
    <string name="dialog_comfirm">confirm</string>
    <string name="overTemp">over temp!</string>
    <string name="headerpaymentwater">ชำระค่าน้ำประปา</string>
    <string name="headerpayment">ชำระค่าบริการอื่นๆ</string>
    <string name="invoice">ค่าชำระ</string>
    <string name="gettexterror">จำเป็นต้องกรอก</string>
    <string name="gettexthint">กรุณากรอกเลขที่บ้านหรือเลขมาตร</string>

    <string name="PORT">5000/</string>
    <string name="URL">http://10.0.0.205:</string>
    <string name="addInvoice">addInvoice/</string>
    <string name="fileuploadSuccess">Upload success</string>
    <string name="submit">Submit</string>
    <string name="type">ประเภท</string>
    <string name="amount">จำนวนเงิน</string>
    <string name="startvaluesid">เลขมาตรเริ่มต้น</string>
    <string name="nowvaluesid">เลขมาตรครั้งนี้</string>
</resources>
